--- a/src/components/Toggler/Toggler.css
+++ b/src/components/Toggler/Toggler.css
@@ -3,7 +3,7 @@
   width: 500px;
   margin: 50px 0;
   padding-top: 0;
-  justify-content: space-between;
+  justify-content: center;
   margin: 30px 0;
   height: 40px;
 }
@@ -11,14 +11,12 @@
 .toggler-btn {
   height: 100%;
   width: 48%;
-  border: 1px solid white;
-  color: white;
+  border: 1px solid black;
+  color: black;
   font-size: 20px;
   cursor: pointer;
-  background-color: transparent;
 }
 
 .active {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(44, 185, 19, 0.6);
 }
-
