--- a/src/components/PageContainer/PageContainer.css
+++ b/src/components/PageContainer/PageContainer.css
@@ -1,10 +1,11 @@
 .page-container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100%;
-    align-items: center;
-    background-color: #64766a;
-  }
-  
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+  align-items: center;
+  background-color: #e5edff;
+}
+
+
